# pkg/apiclient/cronworkflow/cron-workflow.swagger.json
@@ -1393,6 +1393,11 @@
           "type": "boolean",
           "format": "boolean",
           "description": "RuntimeResolution skips validation at creation time.\nBy enabling this option, you can create the referred workflow template before the actual runtime."
+        },
+        "clusterscope": {
+          "type": "boolean",
+          "format": "boolean",
+          "description": "ClusterScope indicates the referred template is cluster scoped clusterworkflowtemplate."
         }
       },
       "description": "TemplateRef is a reference of template resource."
